// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid /> should match with snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test <GifGrid /> should return some values using useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={1234}
      key="1234"
      title="Testing title"
      url="http://localhost/test.jpg"
    />
  </div>
</Fragment>
`;
